<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Trobify</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="trobify">Trobify</string>
    <string name="correo_electr_nico">Correo electrónico:</string>
    <string name="contrase_a">Contraseña:</string>
    <string name="a_n_no_tienes_cuenta">¿Aún no tienes una cuenta?</string>
    <string name="hint" tools:ignore="DuplicateDefinition">hint</string>
    <string name="registrar">Registrar</string>
    <string name="nombre">Nombre:</string>
    <string name="apellidos">Apellidos:</string>
    <string name="confirmar_contrase_a">Confirmar contraseña:</string>
    <string name="siguiente">Siguiente</string>
    <string name="volver">Volver</string>
    <string name="n_mero_de_habitaciones">Número de habitaciones</string>
    <string name="n_mero_de_ba_os">Número de baños</string>
    <string name="obra_nueva">Obra nueva</string>
    <string name="tipo_de_vivienda">Tipo de vivienda</string>
    <string name="superficie">Superficie</string>
    <string name="precio">Precio</string>
    <string name="tipo_de_inmueble">Tipo de inmueble</string>
    <string name="casi_nuevo">Casi nuevo</string>
    <string name="muy_bien">Muy bien</string>
    <string name="estado_de_la_vivienda">Estado de la vivienda</string>
    <string name="bien">Bien</string>
    <string name="reformado">Reformado</string>
    <string name="a_reformar">A reformar</string>
    <string name="extras">Extras</string>
    <string name="parking">Parking</string>
    <string name="ascensor">Ascensor</string>
    <string name="amueblado">Amueblado</string>
    <string name="calefacci_n">Calefacción</string>
    <string name="jard_n">Jardín</string>
    <string name="piscina">Piscina</string>
    <string name="terraza">Terraza</string>
    <string name="trastero">Trastero</string>
    <string name="button">Button</string>
    <string name="fav">Fav</string>
    <string name="todo">TODO</string>
    <string name="descripcion">DESCRIPCION</string>
    <string name="anunciante">ANUNCIANTE</string>
    <string name="pepe">PEPE</string>
    <string name="caracteristicas">CARACTERISTICAS</string>
    <string name="atras">atras</string>

    <string-array name="options_inmueble">
        <item>Cualquiera</item>
        <item>Vivienda</item>
        <item>Edificio</item>
        <item>Oficina</item>
        <item>Garaje</item>
        <item>Local</item>
        <item>Terreno</item>
        <item>Nave</item>
    </string-array>

    <string-array name="options_vivienda_por_defecto">
        <item>Apartamento</item>
        <item>Ático</item>
        <item>Dúplex</item>
        <item>Loft</item>
        <item>Planta baja</item>
        <item>Estudio</item>
        <item>Casa</item>
        <item>Chalet</item>
        <item>Adosado</item>
        <item>Finca rústica</item>
    </string-array>

    <string-array name="estado_inmueble">
        <item>Obra nueva</item>
        <item>Casi nuevo</item>
        <item>Muy bien</item>
        <item>Bien</item>
        <item>Reformado</item>
        <item>A reformar</item>
    </string-array>

    <string-array name="options_anuncio">
        <item>Vender</item>
        <item>Alquilar</item>
    </string-array>

    <string-array name="options_vivienda_edificio">
        <item>Apartamento</item>
        <item>Ático</item>
        <item>Dúplex</item>
        <item>Loft</item>
        <item>Planta baja</item>
        <item>Estudio</item>
    </string-array>

    <string-array name="contactOptions">
        <item>Chat</item>
        <item>Hacer oferta</item>
    </string-array>

    <string-array name="orderOptions">
        <item>Precio ascendente</item>
        <item>Precio descendente</item>
        <item>Más recientes</item>
        <item>Más antiguos</item>
    </string-array>

    <string name="title_activity_pruebas">Pruebas</string>
    <string name="nombre_del_inmueble">Nombre del inmueble</string>
    <string name="loacalizaci_n">Loacalización</string>
    <string name="caracter_sticas">Características</string>
    <string name="precio_del_inmueble">Precio del inmueble</string>
    <string name="introduce_la_cantidad_ofrecida">Introduce la cantidad ofrecida</string>
    <string name="enviar_oferta">Enviar oferta</string>
    <string name="title_activity_buscador">Buscador</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_chat">ChatAct</string>
    <string name="title_activity_main_trobify2">MainTrobify2</string>
</resources>