<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:id="@+id/contenedorPrincipal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/contenedorDentroScrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="20dp">

                <LinearLayout
                    android:layout_width="388dp"
                    android:layout_height="match_parent"
                    android:isScrollContainer="false"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/buttonBack"
                        style="@style/Widget.AppCompat.ImageButton"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="end"
                        android:contentDescription="TODO"
                        android:tint="#FF0000"
                        android:visibility="visible"
                        app:srcCompat="@drawable/btn_clear"
                        tools:visibility="visible" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textTipoDeInmueble"
                    android:layout_width="163dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tipo_de_inmueble"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/desplegableTipoInmueble"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp" />

                <TextView
                    android:id="@+id/textTipoDeVivienda"
                    android:layout_width="149dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="@string/tipo_de_vivienda"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/buttonTipoVivienda"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="#03A9F4"
                    android:text="Elegir tipo"
                    android:textColor="@color/white"
                    app:backgroundTint="#03A9F4"></Button>

                <TextView
                    android:id="@+id/textPrecio"
                    android:layout_width="163dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="@string/precio"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/contenedorRangoDePrecio"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/desplegableMinPrecio"
                        android:layout_width="132dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp" />

                    <Spinner
                        android:id="@+id/desplegableMaxPrecio"
                        android:layout_width="135dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="8dp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textNumeroDeHabitaciones"
                    android:layout_width="208dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="@string/n_mero_de_habitaciones"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/desplegableNumHabitaciones"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp" />

                <TextView
                    android:id="@+id/textNumeroDeBaños"
                    android:layout_width="208dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="@string/n_mero_de_ba_os"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/desplegableNumBaños"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp" />

                <TextView
                    android:id="@+id/textSuperficie"
                    android:layout_width="131dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="@string/superficie"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/contenedorRangoDeSuperficie"
                    android:layout_width="300dp"
                    android:layout_height="39dp"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/desplegableMinSuperficie"
                        android:layout_width="132dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp" />

                    <Spinner
                        android:id="@+id/desplegableMaxSuperficie"
                        android:layout_width="135dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="8sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textEstadoVivienda"
                    android:layout_width="206dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="@string/estado_de_la_vivienda"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/contenedorEstadoVivienda"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/checkBoxEstadoObraNueva"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/obra_nueva" />

                    <CheckBox
                        android:id="@+id/checkBoxEstadoCasiNuevo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/casi_nuevo" />

                    <CheckBox
                        android:id="@+id/checkBoxEstadoMuyBien"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/muy_bien" />

                    <CheckBox
                        android:id="@+id/checkBoxEstadoBien"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bien" />

                    <CheckBox
                        android:id="@+id/checkBoxEstadoReformado"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/reformado" />

                    <CheckBox
                        android:id="@+id/checkBoxEstadoAReformar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/a_reformar" />

                </LinearLayout>

                <TextView
                    android:id="@+id/textExtras"
                    android:layout_width="131dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="@string/extras"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/contenedorExtras"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/checkBoxExtrasParking"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/parking" />

                    <CheckBox
                        android:id="@+id/checkBoxExtrasAscensor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ascensor" />

                    <CheckBox
                        android:id="@+id/checkBoxExtrasAmueblado"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/amueblado" />

                    <CheckBox
                        android:id="@+id/checkBoxExtrasCalefaccion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/calefacci_n" />

                    <CheckBox
                        android:id="@+id/checkBoxExtrasJardin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/jard_n" />

                    <CheckBox
                        android:id="@+id/checkBoxExtrasPiscina"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/piscina" />

                    <CheckBox
                        android:id="@+id/checkBoxExtrasTerraza"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/terraza" />

                    <CheckBox
                        android:id="@+id/checkBoxExtrasTrastero"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/trastero" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="369dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/buttonBorrarFiltros"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:backgroundTint="#DC0B0B"
                        android:text="Borrar Filtros" />

                    <Button
                        android:id="@+id/buttonAplicar"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="47dp"
                        android:backgroundTint="#03A9F4"
                        android:text="Aplicar" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>